# corn

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  LICENSE  conanfile.py  conanfile.txt  corn-config.cmake.in  vcpkg.json
cmake/: .gnu-toolchain.cmake.swp  clang-arm64-toolchain.cmake  clang-x86_64-toolchain.cmake  mingw-toolchain.cmake  msvc-toolchain.cmake
docs/: .README.md.swp  Doxyfile  README.md
ecs/: display.h  system.h
examples/: CMakeLists.txt
examples/clangy-bird/: clangy-bird.cpp  entities.cpp  etities.cpp  event_args.h  main.cpp  scenes.cpp  scenes.h  systems.cpp  systems.h  text_manager.cpp  text_manager.h
examples/clangy-bird/resources/: settings.json  text.json
examples/cleaning-robot/: main.cpp
examples/cleaning-robot/entities/: camera.cpp  camera.h  robot.cpp  robot.h  sweep.cpp  sweep.h
examples/cleaning-robot/scenes/: game.cpp  game.h
examples/cleaning-robot/systems/: control.cpp  control.h  sweep.cpp  sweep.h
examples/platformer/: platformer.cpp
examples/screen-to-world/: entities.cpp  entities.h  main.cpp  scenes.cpp  scenes.h
geometry/: Vec2.cpp  Vec2.h  Vec3.cpp  _vec2.cpp  _vec2.h  _vec3.cpp  _vec3.h  vec2.cpp  vec3.cpp
include/corn/: core.h  ecs.h  event.h  geometry.h  media.h  ui.h  util.h
include/corn/core/: display.h  game.h  input.h  interface.h  scene.h
include/corn/ecs/: component.h  entity.h  entity_manager.h  entity_manager_template.cpp  entity_manager_template.h  entity_template.cpp  entity_template.h  system.h
include/corn/event/: .event_args.h.swp  event_args.h  event_manager.h  event_scope.h  input.h
include/corn/geometry/: deg.h  frame.h  mat.h  operations.h  operations_template.cpp  operations_template.h  polygon.h  rotation.h  transform.h  vec.h  vec2.h  vec3.h  vec4.h
include/corn/media/: camera_viewport.h  font.h  image.h  interface.h  rich_text.h  rich_text_frame.h  text_render.h
include/corn/ui/: ui_element.h  ui_image.h  ui_label.h  ui_manager.h  ui_manager_template.cpp  ui_manager_template.h  ui_widget.h
include/corn/util/: color.h  config.h  constants.h  exceptions.h  expression.h  expression_helper.h  expression_template.h  geometry.h  relative_value.h  relative_value_helper.cpp  relative_value_helper.h  relative_value_template.cpp  relative_value_template.h  rich_text.h  stopwatch.h  string_utils.h  utf8.h
include/ecs/: component.h  entity.h  system.h
include/main/: game.h  scene.h
include/util/: geometry.h
shaders/: .gitignore  fs_bitmap.sc  fs_triangle.sc  vs_bitmap.sc  vs_triangle.sc
src/: main.cpp
src/corn/core/: display.cpp  game.cpp  interface.cpp  interface_helper.h  scene.cpp
src/corn/ecs/: component.cpp  entity.cpp  entity_manager.cpp  srender.cpp  system.cpp
src/corn/event/: .event_manager.cpp.swp  event_args.cpp  event_args_extend.h  event_manager.cpp  event_scope.cpp
src/corn/geometry/: deg.cpp  frame.cpp  mat.cpp  operations.cpp  polygon.cpp  polygon_helper.cpp  polygon_helper.h  rotation.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/corn/media/: camera_viewport.cpp  camera_viewport_impl.h  font.cpp  font_impl.h  image.cpp  image_impl.h  interface.cpp  interface_helper.cpp  interface_helper.h  interface_impl.h  nsvg_helper.cpp  nsvg_helper.h  rich_text.cpp  rich_text_impl.h  text_render.cpp  text_render_impl.h
src/corn/native/include/macos/: font_impl.h  rich_text_renderer.h
src/corn/native/macos/: font.mm  font_manager.cpp  interface_helper.cpp  rich_text_frame.cpp  rich_text_renderer.mm
src/corn/render/: bitmap_renderer.cpp  bitmap_renderer.h  font_impl.h  image_impl.cpp  image_impl.h  interface_helper.cpp  interface_helper.h  nsvg_helper.h  polygon_renderer.cpp  polygon_renderer.h  shader.cpp  shader.h  shader_embedded.h  text_render_impl.cpp  text_render_impl.h  vertex.cpp  vertex.h
src/corn/ui/: ui_element.cpp  ui_image.cpp  ui_label.cpp  ui_manager.cpp  ui_widget.cpp
src/corn/util/: color.cpp  deg.cpp  exceptions.cpp  expression.cpp  expression_helper.h  expression_impl.h  expression_op_func.cpp  expression_token.cpp  rich_text.cpp  stopwatch.cpp  string_utils.cpp  utf8.cpp  vec2.cpp  vec3.cpp
src/ecs/: entity.cpp  srender.cpp
src/main/: scene.cpp
src/util/: vec2.cpp  vec3.cpp
system/: display.h  system.h
test/: CMakeLists.txt
test/common/: dummy_scene.h  event_args_dummy.h  utility.cpp  utility.h
test/unit/core/: hello_world.cpp
test/unit/event/: event_manager.cpp  event_scope.cpp
test/unit/geometry/: mat.cpp  transform.cpp  vec.cpp  vec2.cpp  vec3.cpp  vec4.cpp
test/unit/ui/: ui_manager.cpp
test/unit/util/: color.cpp  expression.cpp  relative_value.cpp  string_utils.cpp
